tests/query_errors/window_mut_meta/error.txt
Error: 
    1 | define window bad from tumbling
    2 | state 0
    3 | 
    4 | script
    5 |   let a = 7;
    6 |   let $ = a
      |       ^^^^^ Can not assign to `$` here
    7 | end;
